- `convertAiColor()`
  - renamed to `aiColorToCss()`
  - refactored source
  - added unit tests
  - extracted `darkGrayToBlack()`